--- a/presentation/index.Rmd
+++ b/presentation/index.Rmd
@@ -35,7 +35,7 @@ class:  middle, title-slide,
 
 # Réseaux trophiques  <br> des vertébrés <br> terrestres du <br> Québec
 
-<hr width="45%" align="left" size="0.3" color="orange"></hr>
+<hr width="45%" align="left" size="0.3" color="#ffef96"></hr>
 
 ## Crédits de recherche <br> ECL618
 <br><br>
@@ -83,8 +83,33 @@ footnote(general = "NS = Nombre d'espèce, NBasale = Nombre d'espèces basales, 
 
 ---
 
+# Figure rda scaled species
+.center[![:scale 70%](images/rda_fig_scaled_sp.png)]
+
+---
+
+# Figure rda scaled sites
+.center[![:scale 70%](images/rda_fig_scaled_sites.png)]
+
+---
 # Profil latitudinal
 .center[![:scale 70%](images/latitudinal_profil.png)]
+
+---
+
+# Table test de t
+<br><br>
+```{r comment='', echo=FALSE, results='asis'}
+ttest_table <- readRDS("images/ttest_table.RDS")
+rownames(ttest_table) <- c()
+ttest_table[,c(2,4,5,6)] <- round(ttest_table[,c(2,4,5,6)], 2)
+ttest_table <- knitr::kable(ttest_table, format = "html", digits = ncol(ttest_table), row.names= TRUE, col.names = colnames(ttest_table), caption = "TABLE 2: Comparaison des métriques par biome")
+kable_styling(ttest_table, font_size = 18) %>%
+pack_rows("Densité de liens (NL/NS)", 1, 3, label_row_css = "background-color: #666; color: #fff;") %>%
+pack_rows("Connectance (NL/NS²)", 4, 6, label_row_css = "background-color: #666; color: #fff;") %>%
+  collapse_rows(columns = 1, valign = "top") %>%
+footnote(general = "t = statistique de t, Ddf = Degrés de liberté")
+```
 
 ---
 
@@ -106,5 +131,4 @@ class: inverse
 
 .pull-right1[
 <br>
-![:scale 80%](images/logo.png)
 ]
