--- a/presentation/index.Rmd
+++ b/presentation/index.Rmd
@@ -83,15 +83,12 @@ footnote(general = "NS = Nombre d'espèce, NBasale = Nombre d'espèces basales, 
 
 ---
 
-# Figure rda scaled species
-.center[![:scale 70%](images/rda_fig_scaled_sp.png)]
+# RDA métriques
+.center[![:scale 75%](images/varpart_fig.png)]
+
 
 ---
 
-# Figure rda scaled sites
-.center[![:scale 70%](images/rda_fig_scaled_sites.png)]
-
----
 # Profil latitudinal
 .center[![:scale 70%](images/latitudinal_profil.png)]
 
